<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="Donatur">
        <menu>
            <item
                android:id="@+id/create_donatur"
                android:title="Create Donatur Baru" />

            <item
                android:id="@+id/create_akun"
                android:title="Create Akun Baru" />

            <item
                android:id="@+id/list_donatur"
                android:title="List Donatur" />
        </menu>
    </item>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/dashboard"
            android:title="Dashboard" />
        <item
            android:id="@+id/list_call"
            android:icon="@drawable/ic_call_black_24dp"
            android:title="@string/list_call" />
        <item
            android:id="@+id/list_visit"
            android:icon="@drawable/ic_access_time_black_24dp"
            android:title="@string/list_visit" />
        <item
            android:id="@+id/list_closing"
            android:icon="@drawable/ic_check_circle_black_24dp"
            android:title="@string/list_closing" />
    </group>

    <item android:title="Other">
        <menu>
            <item
                android:id="@+id/nav_about_us"
                android:title="@string/nav_about_us" />
            <item
                android:id="@+id/logout"
                android:title="@string/logout" />
        </menu>
    </item>

</menu>